# aeghash

./: .env.example  AGENTS.md  HashDam API v1.md  MBlock Docs v1.4.md  README.md  aeg_hash_uiux_policy.md  aeghash-dev.sqlite3  ops-scopes.db  pyproject.toml  spec.md  플랫폼_전산_시스템_명세서_v_1.md
.github/workflows/: chromatic.yml  ci.yml  frontend-ui-demo.yml
docs/planning/: api_data_model_outline.md  auth_operations_playbook.md  backend_structure_proposal.md  backend_sync_meeting_request.md  database_strategy.md  development_plan.md  integration_strategy.md  migration_strategy.md  organization_bonus_design.md  platform_system_plan.md  retry_notification_strategy.md  stage3_task2_backend_sync.md  task2_communication_templates.md  task_assignment.md  two_factor_policy.md  uiux_task_breakdown.md
docs/uiux/: a11y_responsive_test_report.md  accessibility_qa_checklist.md  admin_dashboard_table_filter.md  asset_settlement_copy_and_flows.md  authentication_ui_guide.md  bonus_status_messaging.md  codex_task2_delivery.md  education_content_outline.md  figma_review_request_message.md  figma_storybook_mapping.md  inapp_tutorial_qc_plan.md  kpi_dashboard_design.md  mining_merchant_ui_spec.md  mobile_flow_wireguide.md  mobile_motion_spec.md  mobile_responsive_qa_and_training.md  operations_dashboard_ui_review.md  organization_tree_ui.md  versioning_policy.md  (+6 more)
migrations/: env.py
scripts/: __init__.py  auth_cli.py  enable_two_factor.py  export_design_tokens.py  manage_identity_roles.py  oAuth_keys_cli.py  seed_user_identities.py
tokens/: colors.json  components.json  typography.json
(+225 files in other folders)
