[tool.poetry]
name = "aeghash"
version = "0.1.0"
description = "AEG Hash backend services"
authors = ["AEG Hash Team <dev@aeghash.local>"]
readme = "README.md"
packages = [
    { include = "aeghash", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
sqlalchemy = "^2.0"
fastapi = "^0.115.0"
cryptography = "^46.0.2"
python-dotenv = "^1.1.1"
uvicorn = "^0.30.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "tests",
]
markers = [
    "a11y: Accessibility regression checks",
]
